fix showcase and poolside content spill

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,15 @@ ul {
 }
 
 @media(max-width: 700px) {
+  .showcase p {
+    display: none;
+  }
+  
   .product .content p {
+    display: none;
+  }
+  
+  .poolside .content p {
     display: none;
   }
 
@@ -247,8 +255,28 @@ ul {
     width: 50%;
     margin: auto;
   }
-
+  
+  .showcase h2 {
+    width: 85%;
+  }
+  
+  .showcase p {
+    display: none;
+  }
+  
   .product .content {
     width: 85%;
+  }
+  
+  .product .content p {
+    display: none;
+  }
+  
+  .poolside .content {
+    width: 85%;
+  }
+  
+  .poolside .content p {
+    display: none;
   }
 }
